# comunalitats

./: .gitignore  Pipfile  README.md  fixture_helpers.py  fixtures.py  forms.py  managers.py  models.py  pyproject.toml  urls.py  views.py
apps/cc_courses/: apps.py  exceptions.py  models.py  signals.py  urls.py  utils.py
apps/cc_users/: .gitignore  README.md  apps.py  decorators.py  forms.py  managers.py  models.py  urls.py  views.py
apps/coopolis/: admin.py  apps.py  dashboard.py  db_utils.py  forms.py  helpers.py  mixins.py  models.py  storage_backends.py  urls.py  widgets.py
apps/dataexports/: admin.py  apps.py  export_functions.py  models.py
apps/facilities_reservations/: admin.py  apps.py  forms.py  models.py  views.py
apps/formacions/: apps.py
cc_lib/: fixtures.py  form_fields.py  utils.py
cc_lib/commands/: generate_fakes_command.py
cc_lib/styles/: django_forms.scss
coopolis_backoffice/: custom_mail_manager.py  dumpdata.json  dumpdata_cc_courses.json  dumpdata_coopolis.json  manage.py  urls.py
coopolis_backoffice/coopolis_backoffice/: settings.py  urls.py  wsgi.py
coopolis_backoffice/settings/: ateneu-coopolis.py  dev.py  pere.py
docker/: .env  Dockerfile  Dockerfile.app  compose-develop-build.yml  compose-develop-hub.yml  compose-production.yml  docker-compose.yml  preproduction.yml  requirements.txt
docker-develop/: Dockerfile  all_importdbs.sh  all_migrates.sh  all_normalizedata.sh  all_ready_for_migration.sh  docker-compose.yml  nginx.conf  requirements.txt  sh_vars.conf  sprint_may_migrates.sh
docker-develop/nginx.conf/: altpirineu.conf  bnord.conf  catcentral.conf  coopcamp.conf  coopmaresme.conf  coopolis.conf  coopsetania.conf  hospitalet.conf  ponentcoopera.conf  segon-ateneu.conf  terresebre.conf  terresgironines.conf  vallesoccidental.conf
docker-production/: .env  Dockerfile  all_migrate_stages.sh  all_migrates.sh  all_normalizedata.sh  all_ready_for_migration.sh  docker-compose.yml  requirements.txt  sh_vars.conf  sprint_may_migrates.sh
src/: manage.py
src/conf/: settings.py  (+3 more)
(+605 files in other folders)
